[gd_scene load_steps=9 format=3 uid="uid://cpseferbomb0h"]

[ext_resource type="Script" path="res://componets/player/player.gd" id="1_gtsp0"]
[ext_resource type="Resource" uid="uid://ce2n6cf4dqt8m" path="res://componets/player/player_info.tres" id="2_tjgyl"]
[ext_resource type="PackedScene" uid="uid://dla44yymmgqa1" path="res://componets/player/player_gun_prop.tscn" id="3_1vktc"]
[ext_resource type="PackedScene" uid="uid://bmx53al0wfbgl" path="res://componets/player/player_hud.tscn" id="4_6vgwf"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_pnspk"]

[sub_resource type="Sky" id="Sky_by5k1"]
sky_material = SubResource("ProceduralSkyMaterial_pnspk")

[sub_resource type="Environment" id="Environment_d0ypc"]
background_mode = 2
sky = SubResource("Sky_by5k1")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0pf0p"]
radius = 0.726535
height = 2.35404

[node name="Player" type="CharacterBody3D" groups=["player"]]
script = ExtResource("1_gtsp0")
PlayerInfo = ExtResource("2_tjgyl")

[node name="CameraNeck" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.357505)

[node name="PlayerBodyShape" type="CSGCylinder3D" parent="CameraNeck"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.357505)

[node name="Camera3D" type="Camera3D" parent="CameraNeck"]
transform = Transform3D(1, -3.48787e-16, 3.48787e-16, 3.48787e-16, 1, -3.48787e-16, -3.48787e-16, 3.48787e-16, 1, 2.08165e-12, 0.77703, 2.08165e-12)
environment = SubResource("Environment_d0ypc")
current = true
fov = 90.0

[node name="PlayerGunProp" parent="CameraNeck" instance=ExtResource("3_1vktc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.412829, 0)

[node name="ShotingHole" type="Node3D" parent="CameraNeck"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.645011, -1.05302)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_0pf0p")

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(3.1238e-15, 8.74228e-08, -2, 2, -8.74228e-08, -6.97574e-16, -8.74228e-08, -2, -8.74228e-08, 0, 0.562428, -0.912269)
target_position = Vector3(2.08165e-12, 10, 2.08165e-12)

[node name="Barrel_Timer" type="Timer" parent="."]
one_shot = true

[node name="Mana_Inc" type="Timer" parent="."]
one_shot = true

[node name="Barrel_Switch_Timer" type="Timer" parent="."]

[node name="PlayerHud" parent="." instance=ExtResource("4_6vgwf")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false

[connection signal="timeout" from="Barrel_Timer" to="." method="_on_barrel_timer_timeout"]
[connection signal="timeout" from="Mana_Inc" to="." method="_on_mana_inc_timeout"]
